<resources>
    <string name="app_name">TLUContact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_of_don_vi">Name of Don Vi</string>
    <string name="address_of_don_vi">Address of Don Vi</string>
    <string name="todo">TODO</string>
    <string name="name_of_giang_vien">Name of Giang Vien</string>
    <string name="address_of_giang_vien">Address of Giang Vien</string>
    <string name="dbdv">DBDV</string>
    <string name="cbgv">CBGV</string>
    <string name="danh_ba_don_vi">Danh Bạ Đơn Vị</string>
    <string name="tlucontact">TLUContact</string>
    <string name="h_v_t_n">Họ và tên</string>
    <string name="ch_c_v">Chức vụ</string>
    <string name="n_v_c_ng_t_c">Đơn vị công tác</string>
    <string name="email">Email</string>
    <string name="s_i_n_tho_i">Số điện thoại</string>
    <string name="c_n_b_gi_ng_vi_n">Cán Bộ Giảng Viên</string>
    <string name="t_n_n_v">Tên đơn vị:</string>
    <string name="a_ch">Địa chỉ:</string>
    <string name="danh_b_n_v">Danh bạ đơn vị</string>
    <string name="t_m_ki_m">Tìm kiếm ...</string>
    <string name="t_m_ki_m2">Lọc</string>
    <string name="icon">↺</string>
    <string name="id_gv01">ID: GV01</string>
    <string name="id_dv001">ID: DV001</string>
</resources>