<?xml version="1.0" encoding="utf-8"?>
<!--Cardview hien thị thông tin cơ bản của Giảng viên-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    android:id="@+id/cvCBGV">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
<!--        Hình ảnh đại diện -->
        <ImageView
            android:id="@+id/ivGVAvatar"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/male" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:layout_weight="5">
<!--            Tên -->
            <TextView
                android:id="@+id/tvGVName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/name_of_giang_vien"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- ID -->
            <TextView
                android:id="@+id/tvGVId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/id_gv01"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray" />
<!--            Địa chỉ email-->
            <TextView
                android:id="@+id/tvGVAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/address_of_giang_vien"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
