<?xml version="1.0" encoding="utf-8"?>
<!--Cardview hiển thị thông tin đơn vị-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvDBDV"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
<!--        Hien thị biểu tượng đơn vị-->
        <ImageView
            android:id="@+id/ivDVSymbol"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="2"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            app:srcCompat="@drawable/computer" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="5"
            android:orientation="vertical">

<!--            Tên đơn vị-->
            <TextView
                android:id="@+id/tvDVName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="1dp"
                android:text="@string/name_of_don_vi"
                android:textSize="20sp"
                android:textStyle="bold" />
<!--            ID:-->
            <TextView
                android:id="@+id/tvDVId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/id_dv001"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"/>
<!--            Địa chỉ đơn vị-->
            <TextView
                android:id="@+id/tvDVAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/address_of_don_vi"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
